app/assets/stylesheets/components/_card_show.scss
// MAIN & SHARED

.rankings, .skills-show, .tabs, .comments {
  h3 {
    color: $black;
    margin: 0;
  }
  padding: 20px;
  margin: 0 -15px;
}

.main-info-show {
  background-color: $white;
  padding-bottom: 50px;
}

@media all and (min-width: 768px) {
  .main-info-show {
    margin: 0 -15px;
  }
}



// PICTURE RANKING SECTION

.pic-show {
  position: relative;
  .img-show {
    border-top-left-radius: 8px;
    border-top-right-radius: 8px;
    height: 240px;
    width: 100%;
    object-fit: cover;
  }
}

.ranking-show {
  position: absolute;
  display: flex;
  align-items: baseline;
  color: $black;
  font-weight: bold;
  font-size: 16px;
  background-color: $gray;
  right: 0px;
  bottom: 0px;
  border-top-left-radius: 5px;
  padding-right: 6px;
  padding-left: 6px;
  .rank-show {
    font-family: 'Saira Extra Condensed', sans-serif;
    font-size: 30px;
    margin-left: 3px;
    color: white;
    text-shadow: 0.5px 0.5px 2px black;
  }
}


// BIO INFO SECTION

.tabs {
  background-color: $light-gray;
  margin: -15px;
}

.tab-title-show {
  font-size: 24px;
}

#player_bio {
  font-size: 16px;
  font-weight: 300;
  color: $black;
  margin-top: 23px;
  margin-left: 10px;
  margin-right: 10px;
  height: 250px;
}

.player-infos {
  margin-left: 10px;
  margin-right: 10px;
  height: 250px;
}

.details {
  font-size: 16px;
  color: $black;
  line-height: 70%;
  font-weight: 400;
}

.details-info {
  font-weight: 300;
  &.address-place {
    line-height: 1.3;
  }
}

// INFO SECTION

.name-flag-show {
  display: flex;
  justify-content: space-between;
  align-items: baseline;
  margin: 10px;
  margin-bottom: 0;
  h2 {
    color: $black;
    font-size: 32px;
    font-weight: bold;
  }
  .flag-show {
    height: 30px;
    width: 45px;
    margin-top: 0;
    line-height: 2.5em !important;
  }
  .flag-3letters {
    display: flex;
      .flag-letters-vertical {
      display: block;
      margin: 0;
      transform: rotate(270deg);
      margin-right: -10px;
    }
  }
}

@media all and (min-width: 768px) {
  .name-flag-show {
    align-items: flex-start;
    .flag-3letters {
      width: 80px;
      .flag-icon {
        width: 3em;
      }
      .flag-letters-vertical {
        transform: none;
      }
    }
  }
}

.level-style-show {
  display: flex;
  flex-wrap: wrap;
  margin: 10px;
  margin-top: 0;
}

.level-style {
  margin: 0 6px 8px 0;
  background-color: $blue;
  color: white;
  font-size: 16px;
  border-radius: 2px;
  padding-left: 5px;
  padding-right: 5px;
}

// SKILLS SECTION

.strokes, .fitness {
  display: flex;
  flex-direction: column;
}

.strokes {
  margin-bottom: 20px;
}

.skills-subtitle {
  text-align: right;
}

.line-progress-show {
  display: flex;
  align-items: baseline;
  justify-content: space-between;
  p {
    color: $black;
    font-size: 16px;
    margin: 4px;
    width: 90px;
  }
}

.progress {
  height: 0.4em;
  background-color: $gray;
  width: 260px;
}

.skills-show {
  background-color: $light-gray;
}


// RANKING & POINTS SECTION

.rankings {
  color: $black;
  background-color: white;
}

.vertical-line {
  width: 1px;
  height: 90px;
  background-color: #C4C4C4;
}

.world-ranking {
  padding: 20px 0;
}

.rank-points {
  font-size: 24px;
  margin: 0 0.5rem;
}

.stats {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  padding: 0 20px;
}

.challenges-stats {
  span {
    letter-spacing: 1px;
  }
}

// COMMENTS SECTION

.comments {
  background-color: $white;
}

.thumb-show {
  display: flex;
  align-items: baseline;
  font-size: 24px;
  color: $black;
}

.comment-thumb {
  display: flex;
  justify-content: space-between;
  align-items: baseline;
}


.review-avatar {
  display: flex;
  justify-content: space-between;
  padding-top: 25px;
  align-items: center;
  p {
    font-size: 16px;
    font-weight: 300;
    color: $black;
    width: 75%;
    margin-left: 10px;
  }
}

.review-avatar:last-child {
    margin-bottom: 150px;
}

.avatar-name {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  margin-right: 8px;
  min-height: 75px;
  justify-content: space-between;
  h2 {
    font-size: 16px;
    font-weight: 400;
    color: $black;
    text-align: left;
  }
}

